# falco-analyzer

./: Pipfile  README.md  csv_rules.sh  falco_analyzer.py  merge_tags.sh  pyproject.toml
